; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/media/meson/vdec/extr_vdec_helpers.c_canvas_alloc.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/media/meson/vdec/extr_vdec_helpers.c_canvas_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.amvdec_session = type { i64, i32*, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32, i32 }

@MAX_CANVAS = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [30 x i8] c"Reached max number of canvas\0A\00", align 1
@ENOMEM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.amvdec_session*, i32*)* @canvas_alloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @canvas_alloc(%struct.amvdec_session* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.amvdec_session*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store %struct.amvdec_session* %0, %struct.amvdec_session** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load %struct.amvdec_session*, %struct.amvdec_session** %4, align 8
  %8 = getelementptr inbounds %struct.amvdec_session, %struct.amvdec_session* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = load i64, i64* @MAX_CANVAS, align 8
  %11 = icmp sge i64 %9, %10
  br i1 %11, label %12, label %21

12:                                               ; preds = %2
  %13 = load %struct.amvdec_session*, %struct.amvdec_session** %4, align 8
  %14 = getelementptr inbounds %struct.amvdec_session, %struct.amvdec_session* %13, i32 0, i32 2
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @dev_err(i32 %17, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0))
  %19 = load i32, i32* @ENOMEM, align 4
  %20 = sub nsw i32 0, %19
  store i32 %20, i32* %3, align 4
  br label %44

21:                                               ; preds = %2
  %22 = load %struct.amvdec_session*, %struct.amvdec_session** %4, align 8
  %23 = getelementptr inbounds %struct.amvdec_session, %struct.amvdec_session* %22, i32 0, i32 2
  %24 = load %struct.TYPE_2__*, %struct.TYPE_2__** %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = load i32*, i32** %5, align 8
  %28 = call i32 @meson_canvas_alloc(i32 %26, i32* %27)
  store i32 %28, i32* %6, align 4
  %29 = load i32, i32* %6, align 4
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %33

31:                                               ; preds = %21
  %32 = load i32, i32* %6, align 4
  store i32 %32, i32* %3, align 4
  br label %44

33:                                               ; preds = %21
  %34 = load i32*, i32** %5, align 8
  %35 = load i32, i32* %34, align 4
  %36 = load %struct.amvdec_session*, %struct.amvdec_session** %4, align 8
  %37 = getelementptr inbounds %struct.amvdec_session, %struct.amvdec_session* %36, i32 0, i32 1
  %38 = load i32*, i32** %37, align 8
  %39 = load %struct.amvdec_session*, %struct.amvdec_session** %4, align 8
  %40 = getelementptr inbounds %struct.amvdec_session, %struct.amvdec_session* %39, i32 0, i32 0
  %41 = load i64, i64* %40, align 8
  %42 = add nsw i64 %41, 1
  store i64 %42, i64* %40, align 8
  %43 = getelementptr inbounds i32, i32* %38, i64 %41
  store i32 %35, i32* %43, align 4
  store i32 0, i32* %3, align 4
  br label %44

44:                                               ; preds = %33, %31, %12
  %45 = load i32, i32* %3, align 4
  ret i32 %45
}

declare dso_local i32 @dev_err(i32, i8*) #1

declare dso_local i32 @meson_canvas_alloc(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
